# UOR-Atlas-UTQC

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  index.html  scratch.rs
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
crates/tqc-algorithms/: Cargo.toml
crates/tqc-algorithms/src/: checks.rs  grover.rs  lib.rs  qft.rs  qpe.rs  shor.rs
crates/tqc-atlas/src/: lib.rs
crates/tqc-compiler/: Cargo.toml
crates/tqc-compiler/src/: lib.rs  sk.rs
crates/tqc-conformance/: Cargo.toml
crates/tqc-conformance/src/: honesty.rs
crates/tqc-conformance/tests/: bdd.rs  honesty.rs  probes.rs
crates/tqc-core/src/: amplitude.rs  anchor.rs  generators.rs  inner.rs  lib.rs  octonion.rs  spectrum.rs
crates/tqc-model/: Cargo.toml
crates/tqc-model/src/: lib.rs
crates/tqc-mtc/src/: lib.rs  native.rs  verifier.rs
crates/tqc-substrate/: Cargo.toml
crates/tqc-substrate/src/: holo.rs  lib.rs
crates/tqc-vv/: Cargo.toml
crates/tqc-vv/src/: exact.rs  oracle.rs  witness.rs
crates/tqc-vv/tests/: exact_density.rs  holo_gate_semantics.rs  run_sk.rs
docs/architecture/: ARCHITECTURE.md
docs/conceptual-model/: 00-source.md  01-topological-advantage.md  03-status-discipline.md
docs/paper/: claims_crosswalk.toml  generate_html.sh  main.tex  public_test.html
docs/paper/sections/: 01_introduction.tex  01b_atlas_bridge.tex  02_topological_base.tex  03_mathematical_resolution.tex  04_universal_computation.tex  05_algorithmic_rollups.tex  05_topological_advantage.tex  06_topological_advantage.tex  06_verification_architecture.tex  07_conclusion.tex  07_verification_architecture.tex  08_conclusion.tex
features/suites/s0_labels/: complex_amplitude_encoding.feature  definite_anchor_e8.feature
features/suites/s1_generators/: categorical_structure.feature  dual_f4.feature  fusion_g2.feature  inner_product.feature
features/suites/s2_mtc/: atlas_native_mtc.feature  braiding_r_matrix.feature  mac_lane_coherence.feature  modular_s_t.feature  quantum_realization.feature
features/suites/s3_measurement/: holospace_cycle.feature
features/suites/s4_equivalency/: advantage.feature  archimedean_continuity.feature  canonical_kappa_form.feature  certified_carrier_compilation.feature  complexity_bound.feature  contraction_class_elimination.feature  encoded_qubit_universality.feature  eps_free_decision_path.feature  fault_tolerance.feature  finite_closure.feature  generative_closure.feature  grover_search.feature  pair_carrier_structure.feature  qft_algorithm.feature  qpe_algorithm.feature  reconstructability.feature  reduction_crux.feature  s4_modal_logic.feature  shor_algorithm.feature  solovay_kitaev.feature  tensor_contraction_bypass.feature  topological_entanglement.feature  two_qubit_universality.feature  universality.feature  utqc_proven.feature  whitepaper_formatting.feature
features/suites/s4_finite_closure/: advantage.feature  finite_closure.feature
features/targets/s4_equivalency/: advantage.feature  reduction_crux.feature
model/: dictionary.toml  oracles.toml  status.toml
oracles/: PROVENANCE.md
oracles/f1/: atlas-constants.json
xtask/: Cargo.toml
xtask/src/: main.rs
