[package]
name = "xtask"
description = "Workspace automation: oracle integrity verification, F1 pin checking, conformance reporting."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
default-run = "xtask"

[dependencies]
tqc-model.workspace = true
tqc-core.workspace = true
tqc-atlas.workspace = true
tqc-vv = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
tqc-mtc.workspace = true
tqc-substrate.workspace = true
tqc-compiler.workspace = true
tqc-algorithms.workspace = true
serde = { workspace = true, features = ["std"] }
toml = { workspace = true }

[lints]
workspace = true
