[package]
name = "tqc-algorithms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tqc-core = { workspace = true }
tqc-compiler = { workspace = true }
tqc-atlas = { workspace = true }

[lints]
workspace = true
