[package]
name = "tqc-algorithms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tqc-core = { workspace = true }
tqc-compiler = { workspace = true }
tqc-atlas = { workspace = true }
num-integer = "0.1"
num-rational = "0.4"
num-bigint = "0.4"
num-traits = "0.2"

[lints]
workspace = true
