[package]
name = "tqc-conformance"
description = "The BDD (cucumber) runner and the honesty meta-gate: model <-> features <-> witnesses cross-check."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tqc-model = { workspace = true }
tqc-core = { workspace = true }
tqc-atlas = { workspace = true }
tqc-vv = { workspace = true }
tqc-mtc = { workspace = true }
tqc-substrate = { workspace = true }
tqc-algorithms = { workspace = true }
tqc-compiler = { workspace = true }

[dev-dependencies]
cucumber = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true

# The BDD suite is a custom-harness cucumber binary.
[[test]]
name = "bdd"
harness = false

