[package]
name = "tqc-model"
description = "The UTQC conceptual model as typed, validated data (dictionary, status ledger, oracle registry, use-cases)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["std"] }
toml = { workspace = true }

[lints]
workspace = true
