# The substrate facade — the SOLE crate that names holospaces / hologram / uor-addr.
# A workspace member: the V&V/BDD layers depend on it, so the core `gate` CI job builds the
# real substrate graph. The pure math crates (tqc-core/model/atlas) stay substrate-free.
[package]
name = "tqc-substrate"
description = "Facade over the holospaces substrate and the uor-addr composition operations."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
# Pinned to a reproducible revision. default-features = false keeps the build to the
# content-addressing core (no wasmtime engine), which is all the facade needs today.
holospaces = { git = "https://github.com/Hologram-Technologies/holospaces", rev = "f2415624e3a37162d9a30b4dbae776dcebb60e3e", default-features = true }
uor-addr = "0.2.0"
tqc-core = { workspace = true }
tqc-model = { workspace = true }

[lints]
workspace = true
