[package]
name = "tqc-vv"
description = "V&V witnesses + external-oracle loaders. Each witness binds a parametric computation to an authoritative source."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tqc-core = { workspace = true }
tqc-model = { workspace = true }
tqc-atlas = { workspace = true }
tqc-substrate = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
sha2 = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
